fixed margin for spacing

--- a/styles.css
+++ b/styles.css
@@ -135,6 +135,7 @@ canvas#gauge{
 	display:flex;
 	align-items:center;
 	justify-content:center;
+	margin-top: 50px;
 }
 
 /* Waveform canvas */
